# porous_absorber

./: .gitignore  Cargo.toml  LICENSE  README.md  canvas_test.html  index.html  rustfmt.toml  test_server.sh
docs/: configuration.md  microperforated_panel.md  perforated_panel.md  porous_absorber.md  rb_porous_absorber.md  slotted_panel.md
js/: appConfig.js  canvas.js  config.js  domAccess.js  dom_access.js  localStorage.js  local_storage.js  main.js  src.js  tabConfig.js  tabManager.js  tab_manager.js  trace.js  unitConversion.js  unit_conversion.js  utils.js
src/: air.rs  calc_engine.rs  cavity.rs  config.rs  device_microperforated_panel.rs  device_perforated_panel.rs  device_rb_porous_absorber.rs  device_slotted_panel.rs  display.rs  lib.rs  microperforated_panel.rs  perforated_panel.rs  porous_absorber.rs  render.rs  slotted_panel.rs  sound.rs  struct_lib.rs  structs.rs  trace.rs  utils.rs
src/calc_engine/: microperforated_panel.rs  perforated_panel.rs  porous_absorber.rs  slotted_panel.rs
src/chart/: constants.rs  mod.rs  render.rs
src/chart/render/: bezier.rs  canvas_utils.rs  constants.rs  draw.rs  mod.rs
src/config/: air.rs  cavity.rs  chart.rs  config_set.rs  display.rs  generic_device.rs  mod.rs  panel_microperforated.rs  panel_perforated.rs  panel_slotted.rs  porous_layer.rs  ranges.rs  sound.rs  trace_flags.rs
src/devices/: generic_device.rs  microperforated_panel.rs  mod.rs  perforated_panel.rs  porous_absorber.rs  slotted_panel.rs
src/devices/microperforated_panel/: calc_engine.rs  config.rs  mod.rs
src/devices/perforated_panel/: calc_engine.rs  config.rs  mod.rs
src/devices/porous_absorber/: config.rs  (+2 more)
src/structs/: air.rs  cavity.rs  config_air.rs  config_cavity.rs  config_display.rs  config_porous_layer.rs  config_sound.rs  constants.rs  display.rs  generic_device.rs  generic_device_info.rs  microperforated_panel.rs  panel_microperforated.rs  panel_perforated.rs  panel_slotted.rs  perforated_panel.rs  porous_absorber.rs  ranges.rs  slotted_panel.rs  sound.rs
src/trace/: function_boundaries.rs  function_data.rs  mod.rs  trace_flags.rs
src/utils/: maths_functions.rs  mod.rs  validation.rs
styles/: normalize.css  style.css
tabs/: configuration.html  microperforated_panel.html  perforated_panel.html  porous_absorber.html  rb_porous_absorber.html  slotted_panel.html
(+3 files in other folders)
