[package]
name = "porous_absorber_calculator"
version = "1.0.2"
authors = ["Chris Whealy <chris@whealy.com>"]
edition = "2018"
description = "Calculates the acoustic absorption curve of various porous absorber devices"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-complex = "^0.2"
num-format = "^0.4.0"
num = "^0.2.0"
libm = "^0.1.4"
serde = { version = "^1.0.80", features = ["derive"] }
serde_json = "^1.0.32"
serde_derive = "^1.0.80"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.4"
features = [
  'CanvasRenderingContext2d'
, 'Document'
, 'Element'
, 'HtmlCanvasElement'
, 'HtmlImageElement'
, 'TextMetrics'
, 'Window'
]
