[package]
name = "porous_absorber_calculator"
version = "1.2.0"
authors = ["Chris Whealy <chris@whealy.com>"]
edition = "2021"
description = "Calculates the acoustic absorption curve of various porous absorber devices"
license-file = "LICENSE"
repository = "https://github.com/ChrisWhealy/porous_absorber"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4"
num-format = "0.4"
num = "0.4"
libm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.4"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'HtmlImageElement', 'TextMetrics', 'Window']
